<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sign_Up.Activity_Sign_Up">

<RelativeLayout
    android:id="@+id/rv_Info"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:id="@+id/img_get_back"
        android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
        android:layout_width="30dp"
        android:layout_height="50dp">
    </ImageView>
    <TextView
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@id/img_get_back"
        android:id="@+id/tv_welcome"
        android:layout_marginBottom="8dp"
        android:text="@string/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TextView>
    <TextView
        android:textStyle="bold"
        android:layout_marginBottom="16dp"
        android:layout_below="@id/tv_welcome"
        android:text="@string/plz_provide_basic_info"
        android:id="@+id/tv_plz_provide_basic_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TextView>
</RelativeLayout>


    <RelativeLayout
        android:layout_marginBottom="32dp"
        android:id="@+id/rv_profile_image"
        android:layout_below="@id/rv_Info"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <de.hdodenhof.circleimageview.CircleImageView
            android:src="@drawable/avtar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            ></de.hdodenhof.circleimageview.CircleImageView>
    </RelativeLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_marginBottom="32dp"
        android:layout_above="@id/rl_signUp_Different_Account"
        android:layout_below="@id/rv_profile_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


<RelativeLayout
    android:id="@+id/rv_details"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <EditText
        android:layout_marginBottom="16dp"
        android:hint="@string/full_name"
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </EditText>
<RadioGroup
    android:layout_marginBottom="16dp"
    android:layout_below="@id/et_name"
    android:id="@+id/rg_gender"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RadioButton
        android:id="@+id/rb_male"
        android:text="@string/male"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </RadioButton>
    <RadioButton
        android:id="@+id/rb_female"
        android:text="@string/female"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </RadioButton>
    <RadioButton
        android:id="@+id/rb_transgender"
        android:text="@string/transgender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </RadioButton>
</RadioGroup>
    <RelativeLayout
        android:id="@+id/rl_date_of_birth"
        android:layout_below="@id/rg_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="16dp">
        <EditText
            android:id="@+id/et_date_of_birth"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:editable="false"
            android:hint="@string/datepicker"/>
    </RelativeLayout>
    <EditText
        android:layout_marginBottom="16dp"
        android:inputType="textEmailAddress"
        android:id="@+id/et_email_id"
        android:layout_below="@id/rl_date_of_birth"
        android:hint="@string/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </EditText>
    <EditText
        android:inputType="textPassword"
        android:layout_marginBottom="16dp"
        android:id="@+id/et_password"
        android:layout_below="@id/et_email_id"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </EditText>
    <EditText
        android:layout_marginBottom="16dp"
        android:layout_below="@id/et_password"
        android:id="@+id/et_user_type"
        android:hint="@string/user_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></EditText>
    <EditText
        android:layout_marginBottom="16dp"
        android:layout_below="@id/et_user_type"
        android:id="@+id/et_occupation"
        android:hint="@string/occupation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </EditText>
</RelativeLayout>
    </androidx.core.widget.NestedScrollView>
    <RelativeLayout
        android:id="@+id/rl_signUp_Different_Account"
        android:layout_marginBottom="16dp"
        android:layout_above="@id/rv_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:background="?android:attr/selectableItemBackground"
            android:id="@+id/tv_different_account"
            android:clickable="true"
            android:text="@string/Sign_up_different_Account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rv_continue"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">
        <androidx.cardview.widget.CardView
            android:background="@color/splahscreencolor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <FrameLayout
                android:background="@color/splahscreencolor"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <Button
                    android:layout_margin="2dp"
                    android:padding="5dp"
                    android:background="@color/white"
                    android:text="@string/cont"
                    android:id="@+id/btn_continue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </Button>
            </FrameLayout>

        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</RelativeLayout>