<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="24dp"
    android:layout_marginRight="24dp"
    tools:context=".OTP.Activity_OTP_Screen">

    <LinearLayout
        android:layout_marginBottom="32dp"
        android:id="@+id/rv_otp_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rv_info"
        android:gravity="center"
        android:weightSum="4">

        <EditText
            android:textAlignment="center"
            android:layout_marginRight="8dp"
            android:id="@+id/otp_entry1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="32dp"></EditText>

        <EditText
            android:textAlignment="center"
            android:layout_marginRight="8dp"
            android:id="@+id/otp_entry2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/otp_entry1"
            android:layout_weight="1"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="32dp">

        </EditText>

        <EditText
            android:textAlignment="center"
            android:layout_marginRight="8dp"
            android:id="@+id/otp_entry3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/otp_entry2"
            android:layout_weight="1"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="32dp">

        </EditText>

        <EditText
            android:textAlignment="center"
            android:id="@+id/otp_entry4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/otp_entry3"
            android:layout_weight="1"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="32dp"></EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rv_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rv_otp_entry"
        android:weightSum="2">

        <androidx.cardview.widget.CardView
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:cardElevation="5dp"
            app:cardCornerRadius="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <FrameLayout
                android:background="@drawable/card_edge"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <Button
                android:background="@color/white"
                android:text="@string/resend"
                android:id="@+id/btn_resend"
                android:layout_margin="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></Button>
            </FrameLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:cardElevation="5dp"
            app:cardCornerRadius="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:textColor="@color/textcolorwhite"
                android:background="@color/splahscreencolor"
                android:text="@string/submit"
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></Button>
        </androidx.cardview.widget.CardView>
    </LinearLayout>


    <RelativeLayout
        android:id="@+id/img_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_get_back"
            android:layout_width="30dp"
            android:layout_height="50dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:src="@drawable/ic_keyboard_arrow_left_black_24dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rv_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_back"
        android:layout_marginBottom="24dp">

        <TextView
            android:id="@+id/tv_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otp_verification"
            android:textSize="27dp"></TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_otp"
            android:text="@string/enter_verification_code"></TextView>
    </RelativeLayout>
</RelativeLayout>